--- a/src/main/resources/static/print.html
+++ b/src/main/resources/static/print.html
@@ -17,7 +17,7 @@
 </head>
 
 <body style="border: 2px solid black; padding: 10px;">
-    <div style="text-align: center;">
+    <div style="text-align: center;" id="company_info">
         <h2>VEERALAKSHMI ELECTRICAL</h2>
         <p>KALLOORANI</p>
         <p>GSTIN - 33JUFPS2022L1ZG</p>
