--- a/src/main/resources/static/purchase.html
+++ b/src/main/resources/static/purchase.html
@@ -45,6 +45,11 @@
             CUSTOMERS
           </a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="suppliers" id="suppliersNavItem">
+            SUPPLIERS
+          </a>
+        </li>
         <li class="nav-item active">
           <a class="nav-link" href="/view_purchase" id="purchaseNavItem">
             PURCHASE
