--- a/src/main/resources/static/customer.html
+++ b/src/main/resources/static/customer.html
@@ -42,6 +42,11 @@
           </a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="suppliers" id="suppliersNavItem">
+            SUPPLIERS
+          </a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/view_purchase" id="purchaseNavItem">
             PURCHASE
           </a>
@@ -66,23 +71,24 @@
             <button class="btn btn-outline-secondary" type="button" id="clearCustomerButton">Clear</button>
           </div>
         </div>
-
-        <table class="table table-striped table-bordered">
-          <thead class="thead-dark">
-            <tr>
-              <th scope="col">S.No</th>
-              <th scope="col">Company Name</th>
-              <th scope="col">Customer Name</th>
-              <th scope="col">Phone Number</th>
-              <th scope="col">Email</th>
-              <th scope="col">Address</th>
-              <th scope="col">Outstanding</th>
-              <th scope="col">Action</th>
-            </tr>
-          </thead>
-          <tbody id="customers_table_body">
-          </tbody>
-        </table>
+        <div class="row" style="max-height: 500px; overflow:auto">
+          <table class="table table-striped table-bordered">
+            <thead class="thead-dark">
+              <tr>
+                <th scope="col">S.No</th>
+                <th scope="col">Company Name</th>
+                <th scope="col">Customer Name</th>
+                <th scope="col">Phone Number</th>
+                <th scope="col">Email</th>
+                <th scope="col">Address</th>
+                <th scope="col">Outstanding</th>
+                <th scope="col">Action</th>
+              </tr>
+            </thead>
+            <tbody id="customers_table_body">
+            </tbody>
+          </table>
+        </div>
         <!-- Button trigger modal -->
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addCustomerModal"
           style="float: right;">
@@ -251,7 +257,7 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="deleteCustomerHeader">Customer Product</h5>
+              <h5 class="modal-title" id="deleteCustomerHeader">Delete Customer</h5>
             </div>
             <div class="modal-body">
               <div class="alert alert-danger fade show" role="alert" id="deleteCustomerErrorAlert"
