--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -45,6 +45,11 @@
           </a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/suppliers" id="suppliersNavItem">
+            SUPPLIERS
+          </a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/view_purchase" id="purchaseNavItem">
             PURCHASE
           </a>
@@ -253,7 +258,6 @@
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                   <button type="button" class="btn btn-primary" id="createInvoiceButton">Save</button>
-                  <button type="button" class="btn btn-success" id="printInvoiceButton">Print</button>
                 </div>
               </div>
             </div>
