--- a/src/main/resources/static/view_purchase.html
+++ b/src/main/resources/static/view_purchase.html
@@ -14,6 +14,8 @@
   <script src="libs/popper.min.js"></script>
   <script src="libs/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+  <link href="https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel="stylesheet">
+  <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
   <script src="js/common.js"></script>
 
 </head>
@@ -45,6 +47,11 @@
             CUSTOMERS
           </a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="suppliers" id="purchaseNavItem">
+            SUPPLIERS
+          </a>
+        </li>
         <li class="nav-item active">
           <a class="nav-link" href="#" id="purchaseNavItem">
             PURCHASE
@@ -67,40 +74,54 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <div class="input-group mb-3">
-          <input type="text" class="form-control" placeholder="Search Supplier Name" aria-label="Search Supplier Name"
-            aria-describedby="searchPurchaseButton" @keydown="getPurchases">
-          <div class="input-group-append">
-            <button class="btn btn-outline-secondary" type="button" id="searchPurchaseButton">Search</button>
-            <button class="btn btn-outline-secondary" type="button" id="clearPurchaseButton">Clear</button>
+        <div class="form-row">
+          <div class="col mb-3 col-lg-2">
+            <input type="text" id="fromDateInput" class="form-control" placeholder="From Date : YYYY-MM-DD"
+              aria-label="Enter Date Range" aria-describedby="fromDateInput">
+          </div>
+          <div class="col mb-3 col-lg-2">
+            <input type="text" id="toDateInput" class="form-control" placeholder="To Date : YYYY-MM-DD"
+              aria-label="Enter Date Range" aria-describedby="toDateInput">
           </div>
         </div>
-        <table class="table table-striped table-hover">
-          <thead class="thead-dark">
-            <tr>
-              <th scope="col">S.No</th>
-              <th scope="col">Purchase ID</th>
-              <th scope="col">Purchase Date</th>
-              <th scope="col">Supplier Name</th>
-              <th scope="col">Purchase Total</th>
-              <th scope="col">Amount Paid</th>
-              <th scope="col">Action</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr v-for="(purchase, index) in purchases">
-              <td>{{ index + 1 }}</td>
-              <td> {{ purchase.id }} </td>
-              <td> {{ purchase.purchase_date }} </td>
-              <td> {{ purchase.customer_name }} </td>
-              <td> {{ purchase.price }} </td>
-              <td> {{ purchase.amount_paid }} </td>
-              <td>
-                <button type="button" class="btn btn-primary" @click="viewPurchase(purchase.id)">View</button>
-              </td>
-            </tr>
-          </tbody>
-        </table>
+        <div class="input-group mb-3">
+          <input type="text" class="form-control" placeholder="Search Supplier Name" aria-label="Search Supplier Name"
+            aria-describedby="searchPurchaseButton" id="purchaseSearch" @keydown="getPurchases($event)">
+          <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="button" id="searchPurchaseButton"
+              @click="getPurchases($event)">Search</button>
+            <button class="btn btn-outline-secondary" type="button" id="clearPurchaseButton"
+              @click="clearPurchaseSearch">Clear</button>
+          </div>
+        </div>
+        <div class="row" style="max-height: 500px; overflow:auto">
+          <table class="table table-striped table-hover">
+            <thead class="thead-dark">
+              <tr>
+                <th scope="col">S.No</th>
+                <th scope="col">Purchase ID</th>
+                <th scope="col">Purchase Date</th>
+                <th scope="col">Supplier Name</th>
+                <th scope="col">Purchase Total</th>
+                <th scope="col">Amount Paid</th>
+                <th scope="col">Action</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr v-for="(purchase, index) in purchases">
+                <td>{{ index + 1 }}</td>
+                <td> {{ purchase.id }} </td>
+                <td> {{ purchase.purchase_date }} </td>
+                <td> {{ purchase.customer_name }} </td>
+                <td> {{ purchase.price }} </td>
+                <td> {{ purchase.amount_paid }} </td>
+                <td>
+                  <a href="#" @click.prevent="viewPurchase(purchase.id)">View</a>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
         <button type="button" class="btn btn-primary" @click="showAddPurchase" style="float: right;">
           Add Purchase
         </button>
