--- a/src/main/resources/static/products.html
+++ b/src/main/resources/static/products.html
@@ -56,6 +56,11 @@
             PRODUCTS
           </a>
         </li>
+        <li class="nav-item ">
+          <a class="nav-link" href="login" id="logoutNavItem">
+            LOGOUT
+          </a>
+        </li>
       </ul>
     </div>
   </nav>
